SERVER-31138 ensure releaseCursor returns a RAII safe type